fix some margins on mobile photo slide component

--- a/app/styles/components/photo-slide.scss
+++ b/app/styles/components/photo-slide.scss
@@ -34,7 +34,7 @@
 .ps-titles {
   align-items: center;
   justify-content: center;
-  height: inherit;
+  height: 30vh;
   width: 30%;
   margin: 3vw;
   font-family: $data-font;
@@ -65,13 +65,13 @@
   }
 
   .ps-photo {
-    margin: 5vh;
+    margin: 2vh;
     width: 100%;
-    height: 40vh;
+    height: 100%;
   }
 
   .ps-photo-centering {
-    padding-top: 3vh;
+    padding-top: 1vh;
     height: 40vh;
     width: 100%;
     display: flex;
@@ -80,8 +80,14 @@
   }
 
   .ps-titles {
+    margin: 0.5vh;
     float: left;
+    width: 100%;
+    text-align: center;
     .ps-year {
+      h1 {
+        margin-top: -0.5vh;
+      }
       height: 8vh;
       width: 100%;
     }
@@ -93,13 +99,11 @@
     .ps-paragraph {
       height: 15vh;
       width: 100%;
-      padding: 0px 20vw;
+      padding: 0px 10vw;
       h4 {
         font-size: 3.5vw;
       }
     }
-    width: 100%;
-    text-align: center;
   }
 
   h1 {
